@@ -12,11 +12,13 @@ providing a link to a full-size version.
 The image file will be searched for using the same rules as used to find
 the file pointed to by a [[ikiwiki/WikiLink]].
 
-The `size` parameter is optional, defaulting to full size. Note that the
-original image's aspect ratio is always preserved, even if this means
-making the image smaller than the specified size. You can also specify only
-the width or the height, and the other value will be calculated based on
-it: "200x", "x200"
+The `size` parameter is optional, defaulting to full size.
+You can specify only the width or the height, and the other value will
+be calculated based on it: "200x", "x200".
+
+If you specify both the width and height, the original image's aspect
+ratio will be preserved, even if this means making the image smaller
+than the specified size. (However, this is not done for svg images.)
 
 You can also pass `alt`, `title`, `class`, `align`, `id`, `hspace`, and
 `vspace` parameters.
